--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            body   { font-family: sans-serif; background-color: #B7D1FF; margin : 10px 150px 10px  150px;}
+        </style>
+
+    </head>
+    <body>
+        <h1>{{name | safe}}</h1> 
+    </body>
+</html>
 
